# TinyXML_Boosted

./: .gitignore  README.md  xmake.lua
Include/TinyXML_Boosted/: XMLFileLoader.hpp  tinyxml.h
Projects/CMake/: CMakeLists.txt
Projects/CodeBlocks/: TinyXML_Boosted.cbp
Projects/xmake/: xmake.lua
Sources/: XMLFileLoader.cpp  XMLFileLoader.hpp  tinyxml.h
